grammars/poetry-ch.gram
top -> poetry

poetry -> stanza | stanza stanza | poetry "\n" stanza
stanza -> line "\n" line "\n" line "\n\n" | line "\n" line "\n" line "\n" line "\n\n" | line "\n" stanza
line -> sentence | sentence punc | expr punc | sentence | sentence punc | expr punc | question

sentence -> verb expr | pronoun "是" expr | "是" pronoun expr | sentence punc connector sentence | verb noun | noun verb noun | expr verb expr | connector sentence

expr_connector -> "的" | "或" | "和" | "与"
expr -> verb | noun | noun expr_connector noun | noun expr_connector noun | noun expr_connector noun | expr expr_connector expr | expr adj | noun noun_adj | adj "如" noun | noun "或" noun | noun "与" noun | noun "和" noun | "像" noun "一样" | "像" noun "一样" adj | "在" feelings_adj "时" | "让" pronoun verb | "让" noun verb

question -> qn_aux sentence "？" | qn_aux expr "？" | sentence "？" | qn_aux "就好像" expr "？"
qn_aux -> "是否" | "为何" | "难道" | "竟然" | "为什么" | "是不是" | "如何"
punc -> "，" | "，" | "，" | "，" | "。" | "。" | "。" | "——" | "！"
pronoun -> "我" | "你" | "他" | "她" | "它" | "他们" | "我们" | "你们"



adverb -> "好好" | "细细" 

verb_prefix -> "可" | "不可" | "不愿" | "为" | "为了" | "又" | "希望" | "不曾" | "曾经" | "如何" | "便" | "明明" | "不必" | "始终" | "将" | "也" | "被" | "不" | "不再" | "已经" | "正好" | "一步步" | "都" | "都是" | "要" | "往往" | "宁愿" | "才" | "甚至"

verb_suffix -> "了" | "着" | "到"

verb -> noun | verb_prefix verb_hasdec | verb_hasdec verb_suffix verb_hasdec | verb_hasdec | verb_nodec

verb_nodec -> "是" | "不是" | "没有"

verb_hasdec -> | common_verb | common_verb | common_verb | rarer_verb | "不" verb

common_verb -> "明白" | "说" | "走" | "离开" | "来" | "看" | "望" | "听" | "喜欢" | "觉得" | "出现" | "胜过" | "感受" | "用" | "行走" | "品味" | "怕" | "害怕" | "拥有" | "知道" | "将" | "承认" | "流" | "只是" | "相信" | "选择" | "过去" | "忘记" | "承受" | "记得"

rarer_verb -> "借" | "预支" | "引" | "引来" | "藏" | "预知" | "埋在" | "错付" | "飞入" | "做了" | "跌落" | "盛开" | "走过" | "不来" | "等待" | "等" | "怀念" | "说话" | "回报" | "报之" | "要" | "把" | "孕育" | "干涸" | "拥抱" | "有" | "伴" | "陪伴" | "看尽" | "路经" | "经过" | "栖身" | "似" | "好像" | "仿佛" | "多" | "空余" | "开口" | "不需" | "需要" | "后退" | "翻越" | "失去" | "走出" | "呼喊" | "在" | "翻涌" | "惊动" | "不会" | "存在" | "假装" | "立" | "消融" | "明灭" | "摇晃" | "听得" | "迎来" | "奔驰" | "吹走" | "透支" | "遇见" | "沦为" | "绕过" | "失重" | "当是" | "想" | "打败" | "救" | "爱" | "下沉" | "在于" | "回首" | "站在" | "受伤" | "痊愈" | "虚度" | "空有" | "流浪" | "融化" | "照" | "照亮" | "徘徊" | "换" | "错过" | "重逢" | "映照" | "下山" | "让" | "飘" | "漂浮" | "找" | "寻找" | "扑" | "下雨" | "下雪" | "悬空" | "伤人" | "高悬空中" | "推开" | "摆渡" | "没有" | "织出" | "画" | "画上" | "醉" | "沉醉" | "坐在" | "烧热" | "靠近" | "冻结" | "沸腾" | "出现在" | "期待" | "松手" | "仰望" | "可以" | "写字" | "生活" | "坚持" | "飘零" | "宣告" | "浮想联翩" | "爱上" | "对待" | "跋涉" | "终老" | "浮动" | "放手" | "衰老" | "回想" | "舍得" | "舍不得" | "告诉" | "碰到" | "握别" | "停顿" | "碎" | "砸碎" | "飞扬" | "怀着" | "念念不忘" | "驻守" | "伫立" | "未完" | "苏醒" | "铭记" | "穿越" | "穿透" | "不辞而别" | "冒险" | "下雨" | "成全" | "起风" | "住在" | "挣扎" | "感叹" | "沿" | "沿途" | "愿意" | "停息" | "挑" | "挑灯" | "逃" | "逃离" | "拯救" | "归零" | "背负" | "背叛" | "守护" | "散落" | "惩罚" | "问" | "找不到" | "化作" | "篆刻" | "望断" | "折断"



# adjective

people_qty -> "一个" | "千千万万个" | "寥寥几个" | "两三个" | "好多" | "太多" | "无数" | "许多" | "太少"

qty -> "一个" | "千千万万" | "三两个" | "一千" | "无数" | "数不清" | "半个" | "千重" | "一点" | "一些" | "些许" | "许多" | "千里" | "有些" | "一碗" | "一场"

adj_prefix -> "多" | "太" | "最" | "好" | "极为"
adj -> noun_adj | adj_only | adj_prefix noun_adj

adj_only -> "小小" | "大" | "傻" | "不够" | "辽远" | "急" | "匆匆" | "同行" | "短" | "阵阵" | "一直" | "绵绵"
feelings_adj -> "悲怆" | "寒冷" | "向往" | "年轻" | "寂寞" | "孤单" | "孤独" | "寂静" | "彷徨" | "激动" | "勇敢" | "奇怪"

noun_adj -> feelings_adj | feelings_adj | feelings_adj | "繁荣" | "不言而喻" | "最终" | "藏起来" | "鲁莽" | "磊落" | "庄严" | "温暖" | "温柔" | "柔软" | "磊落" | "最初" | "平庸" | "无动于衷" | "黑暗" | "如旧" | "曾经" | "从前" | "不顾一切" | "遥远" | "大火" | "殷红" | "漫长" | "漫漫" | "满满" | "漫夜" | "群星" | "明朝" | "恐惧" | "彻头彻尾" | "彻底" | "清澈" | "失魂落魄" | "薄情" | "粉身碎骨" | "绚烂" | "自负" | "软弱" | "坦白" | "如花" | "随意" | "忧郁" | "悲伤" | "欢喜" | "所有" | "沉重" | "污浊" | "比如" | "脆弱" | "不堪" | "黑白" | "装模作样" | "复杂" | "一个人" | "澄澈" | "苟且" | "诗意" | "简单" | "多余" | "一无所有" | "流浪" | "从容" | "迟钝" | "苍白" | "明亮" | "冰凉" | "舒适" | "悸动" | "懦弱" | "傻傻" | "漫漫" | "烈烈" | "恰到好处" | "鲜明" | "每一个" | "好" | "安宁" | "宁静" | "黯然" | "坚定" | "苦涩" | "不为人知" | "不易察觉" | "骄傲" | "圆缺" | "浮光掠影" | "陈年" | "云涌" | "风起云涌" | "泛黄" | "落幕" | "古老" | "年少" | "辉煌" | "模糊" | "空洞" | "难" | "容易" | "长久" | "永远" | "破碎" | "苦痛" | "疲乏" | "疲倦" | "轰烈" | "轰轰烈烈" | "这样" | "那样" | "这样" | "那样" | "神圣" | "麻木" | "安静" | "失望" | "空灵" | "坦率" | "清冷" | "孤傲" | "憔悴" | "心酸"


# noun_suffix -> "里" | "外" | "之外" | "之中" | "之上" | "中" | "尽处" | "间" | "一样" | "边" | "太多"

noun -> people_noun| things_noun | time_noun | qty_noun | abstract_noun | abstract_noun | abstract_noun | abstract_noun | place_noun | "那" people_noun | "这" people_noun | "那" qty_noun | "这" qty_noun | pronoun | "那个" pronoun | "这个" time_noun | "这个" things_noun| "这" things_noun | "那" things_noun | "那个" things_noun | pronoun "的" things_noun | pronoun "的" abstract_noun | "这" abstract_noun | "在" place_noun | place_noun | people_qty people_noun | qty time_noun | qty abstract_noun | noun_adj | noun_adj | time_noun "里" | time_noun "外" | qty_noun "之外" | people_noun "一样" | qty_noun "一样" | place_noun "一样" | abstract_noun "一样" | place_noun "尽头" | place_noun "尽处"


people_noun -> "诗人" | "摆渡人" |"爱人" |"朋友" | "孩童" | "孩子" | "少年" | "过客" | "归人" | "一个人" | "路人" | "别人" | "佳人" | "小孩"
time_noun -> "春天" | "冬天" | "秋天" | "夏天" | "暮年" | "童年" | "夜晚" | "黄昏" | "三月" | "七月" | "季节" | "冷冬" | "时候" | "黑夜" | "时刻" | "醒时"
qty_noun -> "一杯烈酒" | "一盏灯" | "一秒" | "一年" | "一条街" | "一寸" | "三寸" | "一个字" | "一首歌" | "一切" | "一个人" | "一本书" | "一颗心" | "一支笔" | "有些人" | "一道谜题" | "一场梦" | "一场雨" | "一生" | "一双手" | "一地" | "一棵树" | "一身疲倦" | "亲爱的" | "脉脉春风" | "一场空" | "一场冒险" | "一壶酒" | "一句话"
things_noun -> "身躯" | "瞳孔" | "手" | "皑皑白雪" | "飞蛾" | "身体" | "白纸" | "细雨" | "酒" | "蝴蝶" | "窗口" | "眼睛" | "莲花" | "灯火" | "灯盏" | "鸟" | "飞鸟" |  "花瓣" | "树" | "书" | "心" | "白发" | "笔" | "容貌" | "花香" | "画像" | "屋檐" | "玻璃渣" | "面具" | "明眸" | "繁花" | "丛林" | "曲调" | "曲子" | "川流" | "青石" | "河流"
place_noun -> "这里" | "那里" | "右边" | "左边" | "草原" | "草原上" | "沙漠" | "沙漠里" | "湖面" | "河" | "街道" | "江南" | "沼泽" | "村庄" | "海岸" | "海岸边" | "山" | "大山" | "海" | "大海" | "海边" | "沧海" | "石桥"
abstract_noun -> "以前" | "以后" | "将来" | "过去" | "路上" | "路" | "生活" | "坚持" | "风景" | "回忆" | "燃点" | "愿望" | "结局" | "梦" | "瞬间" | "空间" | "瞬间" | "流水" | "改变" | "故事" | "一寸" | "三寸" | "天" | "天气" | "明镜" | "暖阳" | "喧嚣" | "无声" | "沉默" | "火焰" | "神色" | "眼神" | "微风" | "落日" | "痛" | "昔年" | "世间" | "生命" | "面前" | "伤痕" | "长日" | "远方" | "泥沙" | "大风" | "过错" | "病痛" | "心头" | "无人" | "冰雪" | "岁月" | "灵魂" | "自己" | "绝望" | "希望" | "裂缝" | "伤口" | "错" | "歧路" | "佳境" | "时间" | "里面" | "外面" | "月光" | "盛夏" | "笑语" | "全世界" | "天地" | "笑容" | "风" | "晨风" | "旧梦" | "歌声" | "利刃" | "光晕" | "相遇" | "初遇" | "心事" | "拥抱" | "星空" | "回答" | "死亡" | "光明" | "一个字" | "一首歌" | "天空" | "一切" | "诗歌" | "诗" | "年华" |  "世故" | "玩笑" | "他人" | "深处" | "遗憾" | "满月" | "星河" | "轨道" | "青春" | "长途" | "假面" | "人世间" | "再见" | "秘密" | "理由" | "原因" | "暗香" | "方向" | "错误" | "欢乐" | "快乐" | "悲欢" | "陌路" | "歌" | "谜题" | "深意" | "安排" | "思绪" | "泪水" | "云影" | "事情" | "北方" | "南方" | "长久" | "颜色" | "模样" | "断句" | "心情" | "斜阳" | "残阳" | "时刻" | "尘土" | "微命" | "信念" | "路途" | "时光" | "洪荒" | "灰尘" | "流火" | "春风" | "声音" | "山水" | "喜悦" | "埋怨" | "哀愁" | "冒险" | "呼喊" | "呐喊" | "影子" | "人影" | "背影" | "灰烬" | "尘埃" | "花开" | "明天" | "昨天" | "朝夕" | "潮汐" | "名字" | "烟火" | "何处"

connector -> "可是" | "可" | "然而" | "但是" | "于是" | "所以" | "原来" | "如果" | "如同" | "后来" | "虽然" | "还是" | "若" | "却" | "其实" | "便" | "总是" | "终于" | "而" | "本来" | "总有"
