grammar.py
import random

def top():
    r = random.random()
    if 0/1 < r <= 1/1:
        return poetry()

def poetry():
    r = random.random()
    if 0/3 < r <= 1/3:
        return stanza()
    if 1/3 < r <= 2/3:
        return stanza() + stanza()
    if 2/3 < r <= 3/3:
        return poetry() + "\n" + stanza()

def stanza():
    r = random.random()
    if 0/3 < r <= 1/3:
        return line() + "\n" + line() + "\n" + line() + "\n\n"
    if 1/3 < r <= 2/3:
        return line() + "\n" + line() + "\n" + line() + "\n" + line() + "\n\n"
    if 2/3 < r <= 3/3:
        return line() + "\n" + stanza()

def line():
    r = random.random()
    if 0/7 < r <= 1/7:
        return sentence()
    if 1/7 < r <= 2/7:
        return sentence() + punc()
    if 2/7 < r <= 3/7:
        return expr() + punc()
    if 3/7 < r <= 4/7:
        return sentence()
    if 4/7 < r <= 5/7:
        return sentence() + punc()
    if 5/7 < r <= 6/7:
        return expr() + punc()
    if 6/7 < r <= 7/7:
        return question()

def sentence():
    r = random.random()
    if 0/8 < r <= 1/8:
        return verb() + expr()
    if 1/8 < r <= 2/8:
        return pronoun() + "是" + expr()
    if 2/8 < r <= 3/8:
        return "是" + pronoun() + expr()
    if 3/8 < r <= 4/8:
        return sentence() + punc() + connector() + sentence()
    if 4/8 < r <= 5/8:
        return verb() + noun()
    if 5/8 < r <= 6/8:
        return noun() + verb() + noun()
    if 6/8 < r <= 7/8:
        return expr() + verb() + expr()
    if 7/8 < r <= 8/8:
        return connector() + sentence()

def expr_connector():
    r = random.random()
    if 0/4 < r <= 1/4:
        return "的"
    if 1/4 < r <= 2/4:
        return "或"
    if 2/4 < r <= 3/4:
        return "和"
    if 3/4 < r <= 4/4:
        return "与"

def expr():
    r = random.random()
    if 0/17 < r <= 1/17:
        return verb()
    if 1/17 < r <= 2/17:
        return noun()
    if 2/17 < r <= 3/17:
        return noun() + expr_connector() + noun()
    if 3/17 < r <= 4/17:
        return noun() + expr_connector() + noun()
    if 4/17 < r <= 5/17:
        return noun() + expr_connector() + noun()
    if 5/17 < r <= 6/17:
        return expr() + expr_connector() + expr()
    if 6/17 < r <= 7/17:
        return expr() + adj()
    if 7/17 < r <= 8/17:
        return noun() + noun_adj()
    if 8/17 < r <= 9/17:
        return adj() + "如" + noun()
    if 9/17 < r <= 10/17:
        return noun() + "或" + noun()
    if 10/17 < r <= 11/17:
        return noun() + "与" + noun()
    if 11/17 < r <= 12/17:
        return noun() + "和" + noun()
    if 12/17 < r <= 13/17:
        return "像" + noun() + "一样"
    if 13/17 < r <= 14/17:
        return "像" + noun() + "一样" + adj()
    if 14/17 < r <= 15/17:
        return "在" + feelings_adj() + "时"
    if 15/17 < r <= 16/17:
        return "让" + pronoun() + verb()
    if 16/17 < r <= 17/17:
        return "让" + noun() + verb()

def question():
    r = random.random()
    if 0/4 < r <= 1/4:
        return qn_aux() + sentence() + "？"
    if 1/4 < r <= 2/4:
        return qn_aux() + expr() + "？"
    if 2/4 < r <= 3/4:
        return sentence() + "？"
    if 3/4 < r <= 4/4:
        return qn_aux() + "就好像" + expr() + "？"

def qn_aux():
    r = random.random()
    if 0/7 < r <= 1/7:
        return "是否"
    if 1/7 < r <= 2/7:
        return "为何"
    if 2/7 < r <= 3/7:
        return "难道"
    if 3/7 < r <= 4/7:
        return "竟然"
    if 4/7 < r <= 5/7:
        return "为什么"
    if 5/7 < r <= 6/7:
        return "是不是"
    if 6/7 < r <= 7/7:
        return "如何"

def punc():
    r = random.random()
    if 0/9 < r <= 1/9:
        return "，"
    if 1/9 < r <= 2/9:
        return "，"
    if 2/9 < r <= 3/9:
        return "，"
    if 3/9 < r <= 4/9:
        return "，"
    if 4/9 < r <= 5/9:
        return "。"
    if 5/9 < r <= 6/9:
        return "。"
    if 6/9 < r <= 7/9:
        return "。"
    if 7/9 < r <= 8/9:
        return "——"
    if 8/9 < r <= 9/9:
        return "！"

def pronoun():
    r = random.random()
    if 0/8 < r <= 1/8:
        return "我"
    if 1/8 < r <= 2/8:
        return "你"
    if 2/8 < r <= 3/8:
        return "他"
    if 3/8 < r <= 4/8:
        return "她"
    if 4/8 < r <= 5/8:
        return "它"
    if 5/8 < r <= 6/8:
        return "他们"
    if 6/8 < r <= 7/8:
        return "我们"
    if 7/8 < r <= 8/8:
        return "你们"

def adverb():
    r = random.random()
    if 0/2 < r <= 1/2:
        return "好好"
    if 1/2 < r <= 2/2:
        return "细细"

def verb_prefix():
    r = random.random()
    if 0/29 < r <= 1/29:
        return "可"
    if 1/29 < r <= 2/29:
        return "不可"
    if 2/29 < r <= 3/29:
        return "不愿"
    if 3/29 < r <= 4/29:
        return "为"
    if 4/29 < r <= 5/29:
        return "为了"
    if 5/29 < r <= 6/29:
        return "又"
    if 6/29 < r <= 7/29:
        return "希望"
    if 7/29 < r <= 8/29:
        return "不曾"
    if 8/29 < r <= 9/29:
        return "曾经"
    if 9/29 < r <= 10/29:
        return "如何"
    if 10/29 < r <= 11/29:
        return "便"
    if 11/29 < r <= 12/29:
        return "明明"
    if 12/29 < r <= 13/29:
        return "不必"
    if 13/29 < r <= 14/29:
        return "始终"
    if 14/29 < r <= 15/29:
        return "将"
    if 15/29 < r <= 16/29:
        return "也"
    if 16/29 < r <= 17/29:
        return "被"
    if 17/29 < r <= 18/29:
        return "不"
    if 18/29 < r <= 19/29:
        return "不再"
    if 19/29 < r <= 20/29:
        return "已经"
    if 20/29 < r <= 21/29:
        return "正好"
    if 21/29 < r <= 22/29:
        return "一步步"
    if 22/29 < r <= 23/29:
        return "都"
    if 23/29 < r <= 24/29:
        return "都是"
    if 24/29 < r <= 25/29:
        return "要"
    if 25/29 < r <= 26/29:
        return "往往"
    if 26/29 < r <= 27/29:
        return "宁愿"
    if 27/29 < r <= 28/29:
        return "才"
    if 28/29 < r <= 29/29:
        return "甚至"

def verb_suffix():
    r = random.random()
    if 0/3 < r <= 1/3:
        return "了"
    if 1/3 < r <= 2/3:
        return "着"
    if 2/3 < r <= 3/3:
        return "到"

def verb():
    r = random.random()
    if 0/5 < r <= 1/5:
        return noun()
    if 1/5 < r <= 2/5:
        return verb_prefix() + verb_hasdec()
    if 2/5 < r <= 3/5:
        return verb_hasdec() + verb_suffix() + verb_hasdec()
    if 3/5 < r <= 4/5:
        return verb_hasdec()
    if 4/5 < r <= 5/5:
        return verb_nodec()

def verb_nodec():
    r = random.random()
    if 0/3 < r <= 1/3:
        return "是"
    if 1/3 < r <= 2/3:
        return "不是"
    if 2/3 < r <= 3/3:
        return "没有"

def verb_hasdec():
    r = random.random()
    if 0/5 < r <= 1/5:
        return common_verb()
    if 1/5 < r <= 2/5:
        return common_verb()
    if 2/5 < r <= 3/5:
        return common_verb()
    if 3/5 < r <= 4/5:
        return rarer_verb()
    if 4/5 < r <= 5/5:
        return "不" + verb()

def common_verb():
    r = random.random()
    if 0/30 < r <= 1/30:
        return "明白"
    if 1/30 < r <= 2/30:
        return "说"
    if 2/30 < r <= 3/30:
        return "走"
    if 3/30 < r <= 4/30:
        return "离开"
    if 4/30 < r <= 5/30:
        return "来"
    if 5/30 < r <= 6/30:
        return "看"
    if 6/30 < r <= 7/30:
        return "望"
    if 7/30 < r <= 8/30:
        return "听"
    if 8/30 < r <= 9/30:
        return "喜欢"
    if 9/30 < r <= 10/30:
        return "觉得"
    if 10/30 < r <= 11/30:
        return "出现"
    if 11/30 < r <= 12/30:
        return "胜过"
    if 12/30 < r <= 13/30:
        return "感受"
    if 13/30 < r <= 14/30:
        return "用"
    if 14/30 < r <= 15/30:
        return "行走"
    if 15/30 < r <= 16/30:
        return "品味"
    if 16/30 < r <= 17/30:
        return "怕"
    if 17/30 < r <= 18/30:
        return "害怕"
    if 18/30 < r <= 19/30:
        return "拥有"
    if 19/30 < r <= 20/30:
        return "知道"
    if 20/30 < r <= 21/30:
        return "将"
    if 21/30 < r <= 22/30:
        return "承认"
    if 22/30 < r <= 23/30:
        return "流"
    if 23/30 < r <= 24/30:
        return "只是"
    if 24/30 < r <= 25/30:
        return "相信"
    if 25/30 < r <= 26/30:
        return "选择"
    if 26/30 < r <= 27/30:
        return "过去"
    if 27/30 < r <= 28/30:
        return "忘记"
    if 28/30 < r <= 29/30:
        return "承受"
    if 29/30 < r <= 30/30:
        return "记得"

def rarer_verb():
    r = random.random()
    if 0/176 < r <= 1/176:
        return "借"
    if 1/176 < r <= 2/176:
        return "预支"
    if 2/176 < r <= 3/176:
        return "引"
    if 3/176 < r <= 4/176:
        return "引来"
    if 4/176 < r <= 5/176:
        return "藏"
    if 5/176 < r <= 6/176:
        return "预知"
    if 6/176 < r <= 7/176:
        return "埋在"
    if 7/176 < r <= 8/176:
        return "错付"
    if 8/176 < r <= 9/176:
        return "飞入"
    if 9/176 < r <= 10/176:
        return "做了"
    if 10/176 < r <= 11/176:
        return "跌落"
    if 11/176 < r <= 12/176:
        return "盛开"
    if 12/176 < r <= 13/176:
        return "走过"
    if 13/176 < r <= 14/176:
        return "不来"
    if 14/176 < r <= 15/176:
        return "等待"
    if 15/176 < r <= 16/176:
        return "等"
    if 16/176 < r <= 17/176:
        return "怀念"
    if 17/176 < r <= 18/176:
        return "说话"
    if 18/176 < r <= 19/176:
        return "回报"
    if 19/176 < r <= 20/176:
        return "报之"
    if 20/176 < r <= 21/176:
        return "要"
    if 21/176 < r <= 22/176:
        return "把"
    if 22/176 < r <= 23/176:
        return "孕育"
    if 23/176 < r <= 24/176:
        return "干涸"
    if 24/176 < r <= 25/176:
        return "拥抱"
    if 25/176 < r <= 26/176:
        return "有"
    if 26/176 < r <= 27/176:
        return "伴"
    if 27/176 < r <= 28/176:
        return "陪伴"
    if 28/176 < r <= 29/176:
        return "看尽"
    if 29/176 < r <= 30/176:
        return "路经"
    if 30/176 < r <= 31/176:
        return "经过"
    if 31/176 < r <= 32/176:
        return "栖身"
    if 32/176 < r <= 33/176:
        return "似"
    if 33/176 < r <= 34/176:
        return "好像"
    if 34/176 < r <= 35/176:
        return "仿佛"
    if 35/176 < r <= 36/176:
        return "多"
    if 36/176 < r <= 37/176:
        return "空余"
    if 37/176 < r <= 38/176:
        return "开口"
    if 38/176 < r <= 39/176:
        return "不需"
    if 39/176 < r <= 40/176:
        return "需要"
    if 40/176 < r <= 41/176:
        return "后退"
    if 41/176 < r <= 42/176:
        return "翻越"
    if 42/176 < r <= 43/176:
        return "失去"
    if 43/176 < r <= 44/176:
        return "走出"
    if 44/176 < r <= 45/176:
        return "呼喊"
    if 45/176 < r <= 46/176:
        return "在"
    if 46/176 < r <= 47/176:
        return "翻涌"
    if 47/176 < r <= 48/176:
        return "惊动"
    if 48/176 < r <= 49/176:
        return "不会"
    if 49/176 < r <= 50/176:
        return "存在"
    if 50/176 < r <= 51/176:
        return "假装"
    if 51/176 < r <= 52/176:
        return "立"
    if 52/176 < r <= 53/176:
        return "消融"
    if 53/176 < r <= 54/176:
        return "明灭"
    if 54/176 < r <= 55/176:
        return "摇晃"
    if 55/176 < r <= 56/176:
        return "听得"
    if 56/176 < r <= 57/176:
        return "迎来"
    if 57/176 < r <= 58/176:
        return "奔驰"
    if 58/176 < r <= 59/176:
        return "吹走"
    if 59/176 < r <= 60/176:
        return "透支"
    if 60/176 < r <= 61/176:
        return "遇见"
    if 61/176 < r <= 62/176:
        return "沦为"
    if 62/176 < r <= 63/176:
        return "绕过"
    if 63/176 < r <= 64/176:
        return "失重"
    if 64/176 < r <= 65/176:
        return "当是"
    if 65/176 < r <= 66/176:
        return "想"
    if 66/176 < r <= 67/176:
        return "打败"
    if 67/176 < r <= 68/176:
        return "救"
    if 68/176 < r <= 69/176:
        return "爱"
    if 69/176 < r <= 70/176:
        return "下沉"
    if 70/176 < r <= 71/176:
        return "在于"
    if 71/176 < r <= 72/176:
        return "回首"
    if 72/176 < r <= 73/176:
        return "站在"
    if 73/176 < r <= 74/176:
        return "受伤"
    if 74/176 < r <= 75/176:
        return "痊愈"
    if 75/176 < r <= 76/176:
        return "虚度"
    if 76/176 < r <= 77/176:
        return "空有"
    if 77/176 < r <= 78/176:
        return "流浪"
    if 78/176 < r <= 79/176:
        return "融化"
    if 79/176 < r <= 80/176:
        return "照"
    if 80/176 < r <= 81/176:
        return "照亮"
    if 81/176 < r <= 82/176:
        return "徘徊"
    if 82/176 < r <= 83/176:
        return "换"
    if 83/176 < r <= 84/176:
        return "错过"
    if 84/176 < r <= 85/176:
        return "重逢"
    if 85/176 < r <= 86/176:
        return "映照"
    if 86/176 < r <= 87/176:
        return "下山"
    if 87/176 < r <= 88/176:
        return "让"
    if 88/176 < r <= 89/176:
        return "飘"
    if 89/176 < r <= 90/176:
        return "漂浮"
    if 90/176 < r <= 91/176:
        return "找"
    if 91/176 < r <= 92/176:
        return "寻找"
    if 92/176 < r <= 93/176:
        return "扑"
    if 93/176 < r <= 94/176:
        return "下雨"
    if 94/176 < r <= 95/176:
        return "下雪"
    if 95/176 < r <= 96/176:
        return "悬空"
    if 96/176 < r <= 97/176:
        return "伤人"
    if 97/176 < r <= 98/176:
        return "高悬空中"
    if 98/176 < r <= 99/176:
        return "推开"
    if 99/176 < r <= 100/176:
        return "摆渡"
    if 100/176 < r <= 101/176:
        return "没有"
    if 101/176 < r <= 102/176:
        return "织出"
    if 102/176 < r <= 103/176:
        return "画"
    if 103/176 < r <= 104/176:
        return "画上"
    if 104/176 < r <= 105/176:
        return "醉"
    if 105/176 < r <= 106/176:
        return "沉醉"
    if 106/176 < r <= 107/176:
        return "坐在"
    if 107/176 < r <= 108/176:
        return "烧热"
    if 108/176 < r <= 109/176:
        return "靠近"
    if 109/176 < r <= 110/176:
        return "冻结"
    if 110/176 < r <= 111/176:
        return "沸腾"
    if 111/176 < r <= 112/176:
        return "出现在"
    if 112/176 < r <= 113/176:
        return "期待"
    if 113/176 < r <= 114/176:
        return "松手"
    if 114/176 < r <= 115/176:
        return "仰望"
    if 115/176 < r <= 116/176:
        return "可以"
    if 116/176 < r <= 117/176:
        return "写字"
    if 117/176 < r <= 118/176:
        return "生活"
    if 118/176 < r <= 119/176:
        return "坚持"
    if 119/176 < r <= 120/176:
        return "飘零"
    if 120/176 < r <= 121/176:
        return "宣告"
    if 121/176 < r <= 122/176:
        return "浮想联翩"
    if 122/176 < r <= 123/176:
        return "爱上"
    if 123/176 < r <= 124/176:
        return "对待"
    if 124/176 < r <= 125/176:
        return "跋涉"
    if 125/176 < r <= 126/176:
        return "终老"
    if 126/176 < r <= 127/176:
        return "浮动"
    if 127/176 < r <= 128/176:
        return "放手"
    if 128/176 < r <= 129/176:
        return "衰老"
    if 129/176 < r <= 130/176:
        return "回想"
    if 130/176 < r <= 131/176:
        return "舍得"
    if 131/176 < r <= 132/176:
        return "舍不得"
    if 132/176 < r <= 133/176:
        return "告诉"
    if 133/176 < r <= 134/176:
        return "碰到"
    if 134/176 < r <= 135/176:
        return "握别"
    if 135/176 < r <= 136/176:
        return "停顿"
    if 136/176 < r <= 137/176:
        return "碎"
    if 137/176 < r <= 138/176:
        return "砸碎"
    if 138/176 < r <= 139/176:
        return "飞扬"
    if 139/176 < r <= 140/176:
        return "怀着"
    if 140/176 < r <= 141/176:
        return "念念不忘"
    if 141/176 < r <= 142/176:
        return "驻守"
    if 142/176 < r <= 143/176:
        return "伫立"
    if 143/176 < r <= 144/176:
        return "未完"
    if 144/176 < r <= 145/176:
        return "苏醒"
    if 145/176 < r <= 146/176:
        return "铭记"
    if 146/176 < r <= 147/176:
        return "穿越"
    if 147/176 < r <= 148/176:
        return "穿透"
    if 148/176 < r <= 149/176:
        return "不辞而别"
    if 149/176 < r <= 150/176:
        return "冒险"
    if 150/176 < r <= 151/176:
        return "下雨"
    if 151/176 < r <= 152/176:
        return "成全"
    if 152/176 < r <= 153/176:
        return "起风"
    if 153/176 < r <= 154/176:
        return "住在"
    if 154/176 < r <= 155/176:
        return "挣扎"
    if 155/176 < r <= 156/176:
        return "感叹"
    if 156/176 < r <= 157/176:
        return "沿"
    if 157/176 < r <= 158/176:
        return "沿途"
    if 158/176 < r <= 159/176:
        return "愿意"
    if 159/176 < r <= 160/176:
        return "停息"
    if 160/176 < r <= 161/176:
        return "挑"
    if 161/176 < r <= 162/176:
        return "挑灯"
    if 162/176 < r <= 163/176:
        return "逃"
    if 163/176 < r <= 164/176:
        return "逃离"
    if 164/176 < r <= 165/176:
        return "拯救"
    if 165/176 < r <= 166/176:
        return "归零"
    if 166/176 < r <= 167/176:
        return "背负"
    if 167/176 < r <= 168/176:
        return "背叛"
    if 168/176 < r <= 169/176:
        return "守护"
    if 169/176 < r <= 170/176:
        return "散落"
    if 170/176 < r <= 171/176:
        return "惩罚"
    if 171/176 < r <= 172/176:
        return "问"
    if 172/176 < r <= 173/176:
        return "找不到"
    if 173/176 < r <= 174/176:
        return "化作"
    if 174/176 < r <= 175/176:
        return "篆刻"
    if 175/176 < r <= 176/176:
        return "望断"

def people_qty():
    r = random.random()
    if 0/9 < r <= 1/9:
        return "一个"
    if 1/9 < r <= 2/9:
        return "千千万万个"
    if 2/9 < r <= 3/9:
        return "寥寥几个"
    if 3/9 < r <= 4/9:
        return "两三个"
    if 4/9 < r <= 5/9:
        return "好多"
    if 5/9 < r <= 6/9:
        return "太多"
    if 6/9 < r <= 7/9:
        return "无数"
    if 7/9 < r <= 8/9:
        return "许多"
    if 8/9 < r <= 9/9:
        return "太少"

def qty():
    r = random.random()
    if 0/16 < r <= 1/16:
        return "一个"
    if 1/16 < r <= 2/16:
        return "千千万万"
    if 2/16 < r <= 3/16:
        return "三两个"
    if 3/16 < r <= 4/16:
        return "一千"
    if 4/16 < r <= 5/16:
        return "无数"
    if 5/16 < r <= 6/16:
        return "数不清"
    if 6/16 < r <= 7/16:
        return "半个"
    if 7/16 < r <= 8/16:
        return "千重"
    if 8/16 < r <= 9/16:
        return "一点"
    if 9/16 < r <= 10/16:
        return "一些"
    if 10/16 < r <= 11/16:
        return "些许"
    if 11/16 < r <= 12/16:
        return "许多"
    if 12/16 < r <= 13/16:
        return "千里"
    if 13/16 < r <= 14/16:
        return "有些"
    if 14/16 < r <= 15/16:
        return "一碗"
    if 15/16 < r <= 16/16:
        return "一场"

def adj_prefix():
    r = random.random()
    if 0/5 < r <= 1/5:
        return "多"
    if 1/5 < r <= 2/5:
        return "太"
    if 2/5 < r <= 3/5:
        return "最"
    if 3/5 < r <= 4/5:
        return "好"
    if 4/5 < r <= 5/5:
        return "极为"

def adj():
    r = random.random()
    if 0/3 < r <= 1/3:
        return noun_adj()
    if 1/3 < r <= 2/3:
        return adj_only()
    if 2/3 < r <= 3/3:
        return adj_prefix() + noun_adj()
